ddetect (0.101) UNRELEASED; urgency=low

  * Joey Hess
    - Register the airport module if it's detected so it will be available in
      the installed system.

 -- Joey Hess <joeyh@debian.org>  Tue,  1 Jun 2004 00:08:11 -0300

ddetect (0.100) unstable; urgency=low

  * Per Olofsson
    - On 2.6 kernels, load yenta_socket before the regular PCI detection
      if the hardware is available so that Cardbus cards will be found.
    - Log something less confusing on pcmcia_socket hotplug events.
  * Colin Watson
    - Don't try to load floppy or ide-floppy on NewWorld PowerMacs. Most
      (all?) newworld systems don't have floppy drives, and loading the
      module apparently hangs G5s (closes: #251089).
  * Joshua Kwan
    - Since Discover doesn't grok SBUS yet, load sunhme in the manual
      module loading section because most sparc32 machines have either
      lance (built-in) or HME network connections.
    - To this effect, add a simple archdetect-sparc-linux.c. It will
      certainly have use later.
  * Joey Hess and Christian Perrier
    - Add support for firewire CDs, including scsi bus rescanning for 2.4
      kernels. Closes: #246790, #248011, #233497, #234208
    - Have discover load bridge support so it will find ieee1394 bridges.
  * Christian Perrier
    - Add myself to uploaders

 -- Christian Perrier <bubulle@debian.org>  Sun, 30 May 2004 14:09:07 -0300

ddetect (0.99) unstable; urgency=low

  * Per Olofsson
    - When generating PCMCIA network card device names, also put them in
      /etc/network/devhotplug.
    - Check /sys for Cardbus cards on 2.6 kernels and add them to
      devhotplug.
  * Joey Hess
    - register-module ide-generic for 2.6 kernels. Fixes ide-cds on
      scsi systems with 2.6 kernels. Closes: #251050

 -- Petter Reinholdtsen <pere@debian.org>  Wed, 26 May 2004 17:09:35 -0300

ddetect (0.98) unstable; urgency=low

  * Per Olofsson
    - Only ask whether PCMCIA should be started once. Closes: #250285.