@@ -3,6 +3,8 @@ ddetect (0.101) UNRELEASED; urgency=low
   * Joey Hess
     - Register the airport module if it's detected so it will be available in
       the installed system.
+  * Thiemo Seufer
+    - Add detection for more mips/mipsel systems.
 
  -- Joey Hess <joeyh@debian.org>  Tue,  1 Jun 2004 00:08:11 -0300
 
